# simjson

./: CMakeLists.txt  readme.md  readme_ru.md
cmake/: install-rules.cmake  variables.cmake
docs/: Doxyfile  Doxyfile_ru
for_debug/: simjson.natvis
include/simjson/: json.h
src/: json.cpp
tests/: CMakeLists.txt  test_json.cpp
